tests/error/effects_errors/return_impure_callable_comptime.err
Error: Type mismatch (at $FILE:11:0)
   | 
 9 | 
10 | @guppy.comptime
11 | def main() -> Callable[[int], int] @ effects():
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |    return impure_func
   | ^^^^^^^^^^^^^^^^^^^^^ Expected return value of type `int -[]-> int`, got `int ->
   |                       int`

Guppy compilation failed due to 1 previous error
